Improve webpack.config.js

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
         <title>React SVG Clock</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="main.css" rel="stylesheet">
+        <!--<link href="main.css" rel="stylesheet">-->
     </head>
     <body>
-        <h1>React SVG Clock</h1>
+        <h1>SVG Clock!</h1>
 
+        <script src="lib/es6-shim.min.js"></script>
+        <script src="lib/react.js"></script>
+        <script src="lib/react-dom.js"></script>
         <script src="bundle.js"></script>
     </body>
 </html>
